--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header class="main-header">
-      <h1 class="title">Today's Outfit!</h1>
+      <h1 class="title">Digi_Closet :]</h1>
     </header>
     
     <div id="current-outfit">
