--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Today's Outfit! | Build Your Look</title>
     <meta name="description" content="A fun way to build and organize your outfits!" />
     <link rel="stylesheet" href="style.css" />
-    <script type="text/javascript" src="scripts.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
+    
   </head>
 
   <body>
@@ -35,5 +36,6 @@
       <button onclick="quoteAlert();">Get A Quote!</button>
       <button onclick="removeLastCard();">Remove A Card!</button>
     </div>
+    <script type="text/javascript" src="scripts.js"></script>
   </body>
 </html>
