--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <div class="footer">
       <button onclick="quoteAlert();">Get A Quote!</button>
-      <button onclick="removeLastCard();">Remove A Card!</button>
+      <button onclick="resetOutfit();">Reset Outfit</button>
     </div>
     <script type="text/javascript" src="scripts.js"></script>
   </body>
