--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     </div>
     
     <div class="footer">
-      <button onclick="quoteAlert();">Get A Quote!</button>
+      <button onclick="saveFavOutfit();">Save Favorite Outfit</button>
+      <button onclick="loadFavOutfit();">Load Favorite Outfit</button>
       <button onclick="resetOutfit();">Reset Outfit</button>
     </div>
     <script type="text/javascript" src="scripts.js"></script>
