--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Today's Outfit! | Build Your Look</title>
+    <title>Digital Closet! | Build Your Look</title>
     <meta name="description" content="A fun way to build and organize your outfits!" />
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
