--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <header class="main-header">
       <h1 class="title">Digi_Closet :]</h1>
     </header>
+
+    <div class="filter-container">
+      <input type="text" class="filter-input" id="filterInput" placeholder="Filter out...">
+      <button class="filter-button" onclick="filterOut()">Search</button>
+    </div>
     
     <div id="current-outfit">
       <h2>Your Current Outfit</h2>
